# PyAnEn 0.4.9

- Added Diebold Mariano significance test

# PyAnEn 0.4.8

- Added correlation and brier decomposition
- Changed the parallelization scheme of Integration from tqdm to ray
- Added support for array input within `ens_to_prob`

# PyAnEn 0.4.7

- Added verification for Gamma hurdle model
- Simplified CDF calculation for `below` and `over`
- Abstract classes do not deal with actual data.
- Make saving consistent across different classes
- Add memory efficient option for Integration class
- New way to manage names for file saving

# PyAnEn 0.3.10

- Added verification classes for deterministic, probabilistic, and ensemble forecasts
- Added progress bar from tqdm
- Added unit tests
- Recursively create and remove folders
- CRPS calculation confines numpy arrays to be float to improve stability
- Added str methods
- Added various setters and getters
- Added parallelization to rank histogram
- Switched saving/loading from numpy to pickle

# PyAnEn 0.2.1

- Added new module `Grid`
- Add name decoding to `IO.open_dataset` when `num_chars` is present. This dataset is usually generated from `R`.

# PyAnEn 0.1.2

- Deep copy values from root groups when opening files to avoid IO errors
- Added `IO.open_dataset`
- Added verification functions: `crps`, `bias`, and `bias`
- Initialized the project