@@ -29,7 +29,7 @@ from .utils_verify import ens_to_prob
 from .utils_verify import binarize_obs
 from .utils_verify import calculate_roc
 from .utils_verify import rank_histogram
-from .utils_verify import _reliability_split
+from .utils_verify import _reliability_create_split
 from .utils_verify import _binned_spread_skill_create_split
 
 
@@ -141,7 +141,7 @@ class VerifyEnsemble(Verify):
         f_prob = self.cdf(over=over, below=below)
         o_binary = binarize_obs(self.o, over=over, below=below)
         
-        return _reliability_split(f_prob, o_binary, nbins)
+        return _reliability_create_split(f_prob, o_binary, nbins)
     
     def _roc(self, over=None, below=None):
         
